--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "graded-assessment",
+  "name": "myportfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://surendra-uw.github.io/",
   "dependencies": {
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
@@ -23,12 +24,12 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
