--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myportfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://surendra-uw.github.io/",
+  "homepage": "https://surendra-uw.github.io/portfolio",
   "dependencies": {
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
